# quagga

./: .gitignore  configure.ac
bgpd/: Makefile.am  bgp_advertise.c  bgp_attr.c  bgp_attr.h  bgp_debug.c  bgp_debug.h  bgp_ecommunity.c  bgp_ecommunity.h  bgp_encap.c  bgp_encap_types.h  bgp_evpn.c  bgp_evpn.h  bgp_evpn_ui.c  bgp_evpn_vty.c  bgp_fsm.c  bgp_fsm.h  bgp_main.c  bgp_memory.c  bgp_memory.h  bgp_mpath.c  bgp_mplsvpn.c  bgp_mplsvpn.h  bgp_nexthop.c  bgp_nexthop.h  bgp_nht.c  bgp_open.c  bgp_packet.c  bgp_rd.c  bgp_rd.h  bgp_route.c  bgp_route.h  bgp_routemap.c  bgp_updgrp_adv.c  bgp_updgrp_packet.c  bgp_vty.c  bgp_vty.h  bgp_zebra.c  bgp_zebra.h  bgpd.c  bgpd.h
cumulus/: Makefile.am
cumulus/etc/quagga/: daemons  debian.conf
cumulus/usr/share/cumulus/support/: quagga
debian/: changelog  quagga.dirs  quagga.install  quagga.logrotate  quagga.manpages  rules
doc/: ospf6d.texi
isisd/: isis_lsp.c  isisd.c
ldpd/: ldp_vty_conf.c
lib/: Makefile.am  command.c  command.h  hash.h  if.c  if.h  ipaddr.h  json.c  json.h  log.c  memtypes.c  network.c  plist.c  prefix.c  prefix.h  thread.c  thread.h  vlan.h  vrf.c  vty.c  vty.h  vxlan.h  zclient.c  zclient.h  zebra.h
ospf6d/: ospf6_interface.c  ospf6_interface.h  ospf6_lsa.c  ospf6_route.c  ospf6_route.h  ospf6_snmp.c  ospf6_top.c  ospf6_top.h  ospf6_zebra.c
ospfd/: ospf_interface.h  ospf_network.c  ospf_network.h  ospf_packet.c  ospf_te.c  ospf_vty.c
pimd/: Makefile.am  pim_assert.c  pim_cmd.c  pim_cmd.h  pim_iface.c  pim_iface.h  pim_ifchannel.c  pim_ifchannel.h  pim_igmp.c  pim_igmp.h  pim_igmp_join.c  (+42 more)
(+62 files in other folders)
